Revert "fix footer contacts on tablet"
This reverts commit 85821c377f506820afdae2623a8e41ae1dc72b26.

--- a/src/css/modal-login-register.css
+++ b/src/css/modal-login-register.css
@@ -205,12 +205,14 @@ input[type="password"] {
 }
 
 @media (max-width: 480px){
+  .modal-header {
+  } 
   .modal-header .login-btn,
   .modal-header .registration-btn {
     padding: 15px;
   }
   .modal-log-reg-container {
-    margin: 0 10px;
+    margin: 0 20px;
   }
   .form-container {
     padding: 50px 30px;
